--- a/pom.xml
+++ b/pom.xml
@@ -22,21 +22,19 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!--        <dependency>-->
+        <!--            <groupId>sk_projekat1</groupId>-->
+        <!--            <artifactId>local_implementation</artifactId>-->
+        <!--            <version>1.0-SNAPSHOT</version>-->
+        <!--            <scope>runtime</scope>-->
+        <!--        </dependency>-->
+
         <dependency>
             <groupId>sk_projekat1</groupId>
-            <artifactId>local_implementation</artifactId>
+            <artifactId>drive_implementation</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
-
-
-<!--        <dependency>-->
-<!--            <groupId>sk_projekat1</groupId>-->
-<!--            <artifactId>drive_implementation</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--            <scope>runtime</scope>-->
-<!--        </dependency>-->
-
 
     </dependencies>
 
@@ -90,5 +88,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
